# ChatGPT-Assistant

./: README.md  README.txt  chat-boot.sh  key.txt  make.txt  库依赖.xlsx  问题.txt
source/Linux/: AI_chat.py
source/Linux/chat/: CMakeLists.txt  chat-gpt-mqtt-client3.py  onenet.py  todo.txt  tuling.py
source/Linux/chat-ui/: CMakeLists.txt  test  test.cpp  test.py
source/Linux/chat-ui/freetype-2.8/include/freetype2/freetype/config/: ftoption.h
source/Linux/chat-ui/freetype-2.8/lib/: libfreetype.la  libfreetype.so.6.14.0
source/Linux/chat-ui/freetype-2.8/lib/pkgconfig/: freetype2.pc
source/Linux/chat-ui/mqtt-client/: CMakeLists.txt  mqtt-client.cpp  mqtt-client.h
source/Linux/chat-ui/src/: CMakeLists.txt  TXT_Viewer.c  TXT_Viewer.h  freetype_draw.c  freetype_draw.h  main.cpp  typedef.h
source/Linux/chat/asr/: CMakeLists.txt  asr.cpp  asr.h  common.cpp
source/Linux/chat/audiorecorder/: audio_rec.cpp  audio_rec.h
source/Linux/chat/include/: main.h
source/Linux/chat/mqtt-client/: CMakeLists.txt  mqtt-client.cpp  mqtt-client.h
source/Linux/chat/pocketsphinx/examples/include/pocketsphinx/: sphinx_config.h
source/Linux/chat/pocketsphinx/model/en-us-zn/: cmudict-en-us.dict
source/Linux/chat/src/: CMakeLists.txt  main.cpp  offline_wkup.cpp  offline_wkup.h  time.cpp  time.h  timer.cpp  timer.h
source/Linux/chat/tts/: tts.cpp  tts.h  tts_common.cpp  tts_common.h
source/Windows/chat/: CMakelists.txt  chat-gpt-mqtt-client3.py  onenet.py  todo.txt  tuling.py
source/Windows/chat/asr/: asr.cpp  asr.h  common.h
source/Windows/chat/audiorecorder/: CMakelists.txt  audio_rec.cpp
source/Windows/chat/json/: CMakelists.txt
source/Windows/chat/mqtt-client/: mqtt-client.cpp  mqtt-client.h
source/Windows/chat/paho-mqtt-c-win64-1.3.12/lib/: paho-mqtt3a.lib  paho-mqtt3as.lib  paho-mqtt3c.lib  paho-mqtt3cs.lib
source/Windows/chat/pocketsphinx/examples/: live.c
source/Windows/chat/pocketsphinx/include/pocketsphinx/: model.h
source/Windows/chat/pocketsphinx/model/en-us/: cmudict-en-us.dict
source/Windows/chat/src/: CMakelists.txt  main.cpp  offline_wkup.cpp  offline_wkup.h
source/Windows/chat/tts/: CMakelists.txt  tts.cpp  tts.h  tts_common.cpp
source/onenet/houseroom/: houseroom.ino
外壳/: 主体盒子.stl  盖子.stl
驱动和驱动配置文件/st7789/: .st7789v.o.d
驱动和驱动配置文件/st7789/fbtft/: fb_st7789v.ko  fbtft.ko
驱动和驱动配置文件/st7789/normal/: .st7789.ko.cmd  .st7789.mod.cmd  .st7789.mod.o.cmd  .st7789.o.cmd  Makefile  modules.order  normal_spi_st7789.dts  st7789.c  st7789.ko  st7789.mod  st7789.mod.c
